--- a/Air flight data.ipynb
+++ b/Air flight data.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## In this project I will be analysing a dataset of airplane crashes from 1908 up to 2009.\n",
     "\n",
-    "### My aim will be to see which airline operators have been involved in the most accidents, and to see if air travel is getting safer.\n",
+    "### My aim will be to visualise which airline operators have been involved in the most accidents, aswell as which planes have caused the most deaths. Additionaly I will be looking to see how the number of deaths has changed over time.\n",
     "\n",
     "#### I will start off my importing the libraries below as I will need them to make my analysis."
    ]
